fix swagger gen of user controller
